Fix last bug with hearth on mobile

--- a/sass/_main-menu.scss
+++ b/sass/_main-menu.scss
@@ -60,10 +60,6 @@
 
 
   .container_heart {
-    width: 0%;
-    margin: auto;
-    position: relative;
-	display: inline-block;
 	max-width: 30px;
 	max-height: 30px;
     
